--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
 
     <%= link_to 'SignUp', new_teacher_registration_path %>
      <%= link_to 'SignIn', new_teacher_session_path %>
-    <%= link_to 'SignOut', destroy_teacher_session_path, method: :delete %> 
-    <%= link_to 'EditAccount', edit_teacher_registration_path %>
+    <%= link_to 'SignOut', destroy_teacher_session_path, 'data-turbo-method': :delete %>
+    <%= link_to 'Edit Account', edit_teacher_registration_path %>
     
     <%= yield %>
   </body>
